Fixing spacing on search view results

--- a/web/sites/uregni/themes/uregni_theme/src/scss/theme.scss
+++ b/web/sites/uregni/themes/uregni_theme/src/scss/theme.scss
@@ -107,8 +107,7 @@
     // to keep all sites consistent.
     .views-row {
       border-bottom: 1px solid #d3d7d9;
-      padding-bottom: .4285em;
-      margin-bottom: .5em;
+      padding-bottom: 1.5rem;
 
       &:last-child {
         border-bottom: 0;
